--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,24 +2,19 @@ en:
   shared:
     admin:
       image_picker:
-        image: image
+        image: imagen
   plugins:
     page_templates:
       title: Page Templates
-  admin:
-    page_templates:
-      actions:
-        create_new: Add New Page Template
-        reorder: Reorder Page Templates
-        reorder_done: Done Reordering Page Templates
-      records:
-        title: Page Templates
-        sorry_no_results: Sorry! There are no results found.
-        no_items_yet: There are no Page Templates yet. Click "Add New Page Template" to add your first page template.
-      page_template:
-        view_live_html: View this page template live <br/><em>(opens in a new window)</em>
-        edit: Edit this page template
-        delete: Remove this page template forever
   page_templates:
-    show:
-      other: Other Page Templates
+    records:
+      title: Page Templates
+      sorry_no_results: "Sorry, no results were found."
+      no_items_yet: "There are no Page Templates yet. Try running rake refinery:page_templates:refresh"
+  admin:
+    pages:
+      form_advanced_options:
+        page_template:
+          label: Select a Page Template
+          help: 
+          automatic: Automatic selection
