Selected templates are now used when rendering Pagecontroller#show
Also:
- Automatic template selection based on page and page ancestors' slugs.
- Template is locked (so it won't be auto-selected) when user selects it manually.
- Fixed some JS problems... by completely removing JS addition/removal of tabs. Yippie!
- Use Page.default_parts (defined as RefinerySetting) when no template is available for a page.

Pending:
- Documentation
- Tests
- Refactor Extensions so they're neater
- Fina a way to avoid overriding PagesController
- Gemify

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,3 +18,5 @@ en:
           label: Select a Page Template
           help: 
           automatic: Automatic selection
+          manual_selection: manual
+          auto_selection: auto          
