--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -18,3 +18,5 @@ es:
           label: Select a Page Template
           help: 
           automatic: Automatic selection
+          manual_selection: manual
+          auto_selection: auto
